# python-poetry

./: Dockerfile  README.md  makefile  pyproject.toml
.github/workflows/: defaults.yaml
docs/: README.md
tests/: test_version.py
